[package]
name = "ttrss_api"
description = "API bindings for TinyTinyRSS"
version = "0.1.0"
authors = ["Jeff <jeffka11@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["api", "TTRSS", "TinyTinyRSS"]
categories = ["api-bindings"]
repository = "https://github.com/jeffka11/ttrss_api"
homepage = "https://github.com/jeffka11/ttrss_api"
readme = "Readme.md"
exclude = [
    "run_example.sh",
]


[dependencies]
chrono = { version = "^0.4.11", features = ["serde"] }
reqwest = { version = "^0.10.4", features = ["blocking", "json"] }
serde = { version = "^1.0.107", features = ["derive"] }
serde_json = "^1.0.52"
serde_with = { version = "^1.4.0" }
strum = "^0.18.0"
strum_macros = "^0.18.0"


[[example]]
name = "simple"
path = "examples/simple.rs"
