[package]
name = "ttrss_api"
description = "API bindings for TinyTinyRSS"
version = "0.1.2"
authors = ["Jeff <jeffka11@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["api", "TTRSS", "TinyTinyRSS"]
categories = ["api-bindings"]
repository = "https://github.com/jeffka11/ttrss_api"
homepage = "https://github.com/jeffka11/ttrss_api"
readme = "Readme.md"
exclude = [
    "run_example.sh",
]


[dependencies]
chrono = { version = "^0.4.19", features = ["serde"] }
reqwest = { version = "^0.11.4", features = ["blocking", "json"] }
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
serde_with = { version = "^1.9.4" }
strum = "^0.21.0"
strum_macros = "^0.21.1"


[[example]]
name = "simple"
path = "examples/simple.rs"


[badges]
maintenance = { status = "actively-developed" }